<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".detail.MangaInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMangaInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:menu="@menu/mangainfo_menu"
        app:title="@string/Manga_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/layoutMangaInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="18dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivMangaView"
                    android:layout_width="133dp"
                    android:layout_height="191dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/placeholder_manga2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvMangaTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Manga_title"
                        android:textColor="?attr/colorControlNormal"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/tvMangaAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/Manga_author"
                        android:textColor="@color/hint" />

                    <TextView
                        android:id="@+id/tvMangaStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Manga_status"
                        android:textColor="@color/hint" />

                    <TextView
                        android:id="@+id/tvMangaRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_rating_star"
                        android:drawablePadding="6dp"
                        android:text="@string/Manga_rating"
                        android:textColor="@color/rating"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMangaAdd"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/primary_button_shape"
                    android:drawableStart="@drawable/ic_book_saved"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/Manga_save_btn"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnMangaWebview"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:layout_gravity="right"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/primary_button_shape"
                    android:drawableStart="@drawable/ic_browser_nav"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/Manga_web_btn"
                    android:textColor="@color/white" />
            </LinearLayout>

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/expand_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:animAlphaStart="1"
                app:animDuration="200"
                app:maxCollapsedLines="2">

                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/About_desc"
                    android:textColor="@color/hint"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:background="@android:color/transparent"
                    android:padding="16dp"
                    app:tint="?attr/colorControlNormal" />
            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:background="?attr/dividerColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/listMangaChapter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>