<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/maintoolbar_menu"
        app:title="Settings" />

    <LinearLayout
        android:id="@+id/layoutIncognito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingLeft="18dp"
        android:paddingTop="8dp"
        android:paddingRight="18dp"
        android:paddingBottom="8dp"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="253dp">

        <ImageView
            android:id="@+id/ivIncognito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_incognito"
            app:tint="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIncognito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/Incognito"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvIncognitoHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Incognito_desc"
                android:textColorHint="@color/hint" />
        </LinearLayout>

        <Switch
            android:id="@+id/switchIncognito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDataSaver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingLeft="18dp"
        android:paddingTop="8dp"
        android:paddingRight="18dp"
        android:paddingBottom="8dp"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="253dp">

        <ImageView
            android:id="@+id/ivDataSaver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_datasaver_sett"
            app:tint="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDataSaver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/Data_saver"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDataSaverHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DataSaver_desc"
                android:textColorHint="@color/hint" />
        </LinearLayout>

        <Switch
            android:id="@+id/switchDataSaver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDarkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingLeft="18dp"
        android:paddingTop="8dp"
        android:paddingRight="18dp"
        android:paddingBottom="8dp"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="253dp">

        <ImageView
            android:id="@+id/ivDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_mode_light_sett"
            app:tint="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDarkMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/Dark_mode"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDarkModeHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Dark_mode_OFF"
                android:textColorHint="@color/hint" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingLeft="18dp"
        android:paddingTop="8dp"
        android:paddingRight="18dp"
        android:paddingBottom="8dp"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="253dp">

        <ImageView
            android:id="@+id/iconAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_about"
            app:tint="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/About"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvAboutHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/About_desc"
                android:textColorHint="@color/hint" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>