<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".MoreFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingBottom="28dp"
        android:src="@drawable/logo" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="?attr/dividerColor" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:paddingLeft="18dp"
            android:paddingTop="8dp"
            android:paddingRight="18dp"
            android:paddingBottom="8dp"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="379dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="253dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="10dp"
                android:src="@drawable/ic_settings"
                app:tint="?android:attr/textColorPrimary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/Settings"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvSettingsHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Settings_desc"
                    android:textColorHint="@color/hint" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:paddingLeft="18dp"
            android:paddingTop="8dp"
            android:paddingRight="18dp"
            android:paddingBottom="8dp"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="379dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="253dp">

            <ImageView
                android:id="@+id/iconAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="10dp"
                android:src="@drawable/ic_about"
                app:tint="?android:attr/textColorPrimary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/About"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvAboutHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/About_desc"
                    android:textColorHint="@color/hint" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>